# Spl-Assignment_3_Client

./: CMakeLists.txt  makefile
include/: BGUencdec.h  ConnectionHandler.h  IOThread.h  MessageObject.h  SocketThread.h  utils.h
src/: BGUencdec.cpp  ConnectionHandler.cpp  IOThread.cpp  MessageObject.cpp  SocketThread.cpp  main.cpp  utils.cpp
